syntax = "proto3";

package protobufs;

option go_package = "atlas-backend/internal/protobufs";

import "game_message_payload.proto";
import "chat_message_payload.proto";

enum ClientToServerMessageType {
  REQUEST_GAME_STATE = 0;
  SEND_GAME_UPDATE = 1;
  SEND_CHAT_MESSAGE = 2;
}

// Client to server message
message ClientToServerMessage {
  ClientToServerMessageType message_type = 1;
  oneof payload {
    GameUpdatePayload game_update_payload = 3;
    ChatMessagePayload chat_message_payload = 4;
  }
}

